cluster/trello-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trello-bot
  namespace: trello-bot
  labels:
    app: trello-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trello-bot
  template:
    metadata:
      labels:
        app: trello-bot
    spec:
      containers:
        - name: website
          image: ghcr.io/needleinajaystack/trello-bot:v1.0.7
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
