cluster/trello-bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    haproxy.org/response-set-header: |
      Alt-Svc "h3=\":443\"; ma=86400"
      Cross-Origin-Resource-Policy "same-origin"
      Content-Security-Policy "frame-ancestors 'none'; upgrade-insecure-requests; report-to cf-nel"
      Referrer-Policy "same-origin"
      Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
      X-Content-Type-Options "nosniff"
  name: trello-bot
  namespace: trello-bot
  labels:
    app: trello-bot
spec:
  ingressClassName: haproxy
  rules:
    - host: trello-bot.herron.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: trello-bot
                port:
                  number: 80
  tls:
    - hosts:
        - trello-bot.herron.dev
      secretName: trello-bot-tls
